--- a/view/includes/flash.ejs
+++ b/view/includes/flash.ejs
@@ -1,40 +1,48 @@
-<body>   
-<%if((successMessage && successMessage.length)||(errorMessage && errorMessage.length)){ %>
-<div class="flash-message-container">
-    <%if((successMessage && successMessage.length)) {  %>  
-    <div class="flash-success-message">
-        <p class="successMessage"><%-successMessage %></p>
-        <button class="removeSuccessmessage"><i class="fa-solid fa-xmark"></i></button>
+<body>
+  <%if((successMessage && successMessage.length)||(errorMessage && errorMessage.length)){ %>
+    <div class="flash-message-container">
+      <%if((successMessage && successMessage.length)) { %>
+        <div class="flash-success-message flash-common-cls">
+          <p class="successMessage"><%-successMessage %></p>
+          <button class="removeSuccessmessage"><i class="fa-solid fa-xmark"></i></button>
+        </div>
+        <% } %>
+          <%if((errorMessage && errorMessage.length)) { %>
+            <div class="flash-error-message flash-common-cls">
+              <p class="errorMessage"><%-errorMessage %> </p>
+              <button class="removeSuccessmessage"><i class="fa-solid fa-xmark"></i></button>
+            </div>
+            <% } %>
     </div>
-  <% } %>
-  <%if((errorMessage && errorMessage.length)) {  %> 
-    <div class="flash-error-message">
-        <p class="errorMessage"><%-errorMessage %> </p>
-        <button class="removeSuccessmessage"><i class="fa-solid fa-xmark"></i></button>
-    </div>
-    <% } %>
-</div>
-<% }%>
-<script>
+    <% }%>
+      <script>
 
-  document.addEventListener("DOMContentLoaded", () => {
-  let removeSuccessmessage = document.querySelectorAll(".removeSuccessmessage");
+        document.addEventListener("DOMContentLoaded", () => {
+          let flashContainer = document.querySelector(".flash-message-container");
+          let removeButton = document.querySelector(".removeSuccessmessage");
 
-  if (removeSuccessmessage.length > 0) {
-    removeSuccessmessage.forEach((button) => {
-      button.addEventListener("click", (event) => {
-        let flashContainer = document.querySelector(".flash-message-container");
-        if (!flashContainer.classList.contains("closeFlashMessage")) {
-          flashContainer.classList.add("closeFlashMessage");
-        }
+          // Automatically hide after 4 seconds
+          if (flashContainer) {
+            setTimeout(() => {
+              flashContainer.classList.add("closeFlashMessage");
 
-        setTimeout(() => {
-          flashContainer.style.display = "none";
-        }, 1000);
-      });
-    });
-  } else {
-  }
-});
-</script>
+              setTimeout(() => {
+                flashContainer.remove();
+              }, 2000); // 2 seconds transition complete hone ke baad remove
+            }, 3000); // 3 seconds baad start
+          }
+
+          // Manual close button
+          if (removeButton) {
+            removeButton.addEventListener("click", () => {
+              flashContainer.classList.add("closeFlashMessage");
+
+              setTimeout(() => {
+                flashContainer.remove();
+              }, 2000);
+            });
+          }
+        });
+
+      </script>
 </body>
